feat: reading progress
