# app/Models/ReadingProgress.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class ReadingProgress extends Model
+{
+    protected $table = 'reading_progress';
+
+    protected $fillable = ['user_id', 'book_id', 'last_page'];
+
+    public function book()
+    {
+        return $this->belongsTo(Book::class);
+    }
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+}
